--- a/footer.html
+++ b/footer.html
@@ -7,5 +7,7 @@
 		<script src="http://www.dawgpizza.com/orders/menu.js"></script>
 		<!-- my own JavaScript file, which will use the menu data structure -->
 		<script src="js/populateMenu.js"></script>
+		<script src="js/carousel.js"></script>
+
 	</body>
 </html>
