--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,6 @@
+<!-- Kyle Peterson
+	 This is the common footer for the website. 
+	 Contains the scripts for the page -->
 
 			<img class="bottom-logo" src="img/logo-hor.png" alt="logo">
 		</section>
@@ -7,7 +10,5 @@
 		<script src="http://www.dawgpizza.com/orders/menu.js"></script>
 		<!-- my own JavaScript file, which will use the menu data structure -->
 		<script src="js/populateMenu.js"></script>
-		<script src="js/carousel.js"></script>
-
 	</body>
 </html>
