--- a/header.html
+++ b/header.html
@@ -1,3 +1,7 @@
+<!-- Kyle Peterson
+	 This is the common header for the website. Contains the meta data
+	 and navigation bar -->
+
 <!DOCTYPE html>
 <html>
 	<head>
